--- a/src/styles/choiceDetails.css
+++ b/src/styles/choiceDetails.css
@@ -23,8 +23,6 @@
 
 .addon-option-cost {
   font-weight: normal;
-  font-size: 15px;
-  line-height: 18px;
   color: #535665;
   padding-left: 16px;
 }
